; ModuleID = '/home/carl/AnghaBench/h2o/deps/neverbleed/extr_neverbleed.c_expbuf_shift_num.c'
source_filename = "/home/carl/AnghaBench/h2o/deps/neverbleed/extr_neverbleed.c_expbuf_shift_num.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.expbuf_t = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.expbuf_t*, i64*)* @expbuf_shift_num to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @expbuf_shift_num(%struct.expbuf_t* %0, i64* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.expbuf_t*, align 8
  %5 = alloca i64*, align 8
  store %struct.expbuf_t* %0, %struct.expbuf_t** %4, align 8
  store i64* %1, i64** %5, align 8
  %6 = load %struct.expbuf_t*, %struct.expbuf_t** %4, align 8
  %7 = call i32 @expbuf_size(%struct.expbuf_t* %6)
  %8 = sext i32 %7 to i64
  %9 = icmp ult i64 %8, 8
  br i1 %9, label %10, label %11

10:                                               ; preds = %2
  store i32 -1, i32* %3, align 4
  br label %23

11:                                               ; preds = %2
  %12 = load i64*, i64** %5, align 8
  %13 = load %struct.expbuf_t*, %struct.expbuf_t** %4, align 8
  %14 = getelementptr inbounds %struct.expbuf_t, %struct.expbuf_t* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = call i32 @memcpy(i64* %12, i32 %15, i32 8)
  %17 = load %struct.expbuf_t*, %struct.expbuf_t** %4, align 8
  %18 = getelementptr inbounds %struct.expbuf_t, %struct.expbuf_t* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 4
  %20 = sext i32 %19 to i64
  %21 = add i64 %20, 8
  %22 = trunc i64 %21 to i32
  store i32 %22, i32* %18, align 4
  store i32 0, i32* %3, align 4
  br label %23

23:                                               ; preds = %11, %10
  %24 = load i32, i32* %3, align 4
  ret i32 %24
}

declare dso_local i32 @expbuf_size(%struct.expbuf_t*) #1

declare dso_local i32 @memcpy(i64*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
